# ttf2stitch

./: .gitignore  CLAUDE.md  PLAN.md  PLANNING.md  README.md  REFACTORING.md  assemble.js  auth_utils.py  data-fonts.js  i18n-data.js  pdf-engine.js  pyproject.toml  requirements.txt  run.sh  serve.py  server_cache.py  server_fonts.py  server_utils.py  shared.js  ui-shell.css  ui-shell.html  vercel.json
api/: _shared.py  activate.py  check.py  checkout.py  fonts.py  rasterize.py  verify.py  webhook.py
css/: 00-layers.css  01-tokens.css  02-layout.css  03-sidebar.css  04-controls.css  05-preview.css  06-sheets.css  07-responsive.css  08-auth.css
docs/plan/: 00-current-state.md  01-architecture.md  02-monetization.md  03-phase1-monorepo.md  04-phase2-payment.md  05-phase3-stitchx.md  06-phase4-hub.md  07-phase5-w2s.md  08-phase6-cross.md  09-phase7-growth.md  10-best-practices.md  11-performance.md  (+6 more)
pdf-modules/: pdf-bitmap.js  pdf-chrome.js  pdf-helpers.js  pdf-legend.js  pdf-modal.js  pdf-redacted.js  pdf-renderer.js
public/: font-review.html  index.html  inspector.html  terms.html
tests/: conftest.py  test_cell_detector.py  test_cli.py  test_extractor.py  test_filters.py  test_pdf_engine.js  test_preview.py  test_rasterizer.py  test_sampler.py  test_schema.py  test_utils.py  test_validator.py
ui-modules/: api.js  auth.js  bitmap.js  bottom-input.js  color-manager.js  font-manager.js  i18n.js  init.js  mobile-toolbar.js  mobile-ui.js  pdf-integration.js  preview.js  renderer.js  settings.js  sheet-content.js  sheet-system.js  state.js  virtual-scroll.js
(+25 files in other folders)
